🔮 Solving hamiltonian with backtracking

--- a/projects/knights-tour/Cargo.toml
+++ b/projects/knights-tour/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hamiltonian"
+name = "knights-tour"
 version = "0.0.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "..."
@@ -10,7 +10,6 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
-gen-iter = "0.3.0"
 
 [dev-dependencies]
 
