--- a/projects/knights-tour/Cargo.toml
+++ b/projects/knights-tour/Cargo.toml
@@ -10,6 +10,11 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
+gen-iter = "0.3.0"
+
+[dependencies.hamiltonian]
+#version = "0.0.0"
+path = "../hamiltonian"
 
 [dev-dependencies]
 
