--- a/projects/knights-tour/Cargo.toml
+++ b/projects/knights-tour/Cargo.toml
@@ -10,11 +10,7 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
-#gen-iter = "0.3.0"
-#
-#[dependencies.hamiltonian]
-##version = "0.0.0"
-#path = "../hamiltonian"
+svg = "0.13.0"
 
 [dev-dependencies]
 
