--- a/projects/knights-tour-web/Cargo.toml
+++ b/projects/knights-tour-web/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2021"
 
 [dependencies]
 dioxus = "0.3.2"
+dioxus-web = "0.3.1"
 
 [dependencies.knights-tour]
 path = "../knights-tour"
