--- a/projects/hamiltonian/Cargo.toml
+++ b/projects/hamiltonian/Cargo.toml
@@ -1,16 +1,17 @@
 [package]
 name = "hamiltonian"
-version = "0.0.0"
+version = "0.0.1"
 authors = ["Aster <192607617@qq.com>"]
-description = "..."
-repository = "https://github.com/oovm/sub_projects"
-documentation = "https://docs.rs/sub_projects"
+description = "Hamiltonian path solver"
+repository = "https://github.com/oovm/knights-tour"
+documentation = "https://docs.rs/hamiltonian"
 readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
-gen-iter = "0.3.0"
+itertools = "0.10.5"
+rand = { version = "0.8.5", features = ["small_rng"] }
 
 [dev-dependencies]
 
